# ai-customizable-e-commerce

ai-customizable-e-commerce-backend/: alembic.ini  main.py  pyproject.toml
ai-customizable-e-commerce-backend/agents/: customize_ecommerce_agent.py
ai-customizable-e-commerce-backend/alembic/: env.py
ai-customizable-e-commerce-backend/alembic/versions/: 169d9e6913da_add_product_id_to_cart_items.py  33ffeea2d3f0_create_cart_item_table.py  3b753fc2b989_add_customization_field_to_cart_item.py  879beec39560_create_review_table.py  8b1cc9ef9434_add_new_user_table.py  9810e88c10a1_create_customize_product_table.py  b9aedff97321_add_logo_and_placement_to_customized_.py  e224f1389a0b_create_checkout_table.py
ai-customizable-e-commerce-backend/config/: database.py
ai-customizable-e-commerce-backend/controllers/: auth_controller.py  checkout_controller.py  customize_product_controller.py  product_controller.py  review_controller.py
ai-customizable-e-commerce-backend/models/: auth_model.py  checkout_model.py  customize_product_model.py  product_model.py  review_model.py
ai-customizable-e-commerce-backend/routes/: auth_route.py  checkout_route.py  customize_product_route.py  customize_route.py  product_route.py  review_route.py
ai-customizable-e-commerce-backend/utils/: utils.py
ai-customizable-e-commerce-frontend/: package-lock.json  package.json  tailwind.config.ts
ai-customizable-e-commerce-frontend/src/: middleware.ts
ai-customizable-e-commerce-frontend/src/app/: Home.types.ts  globals.css  layout.tsx  page.tsx
(+66 files in other folders)
