[project]
name = "ai-customizable-e-commerce-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Umar Hayat",email = "umarhayat.coder@gmail.com"}
]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi[standard] (>=0.128.3,<0.129.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "bcrypt (>=4.0.1,<5.0.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain (>=1.2.9,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
